[package]
name = "aoc2023"
version = "0.0.1"
authors = ["Julian Stecklina <js@alien8.de>"]
edition = "2021"
description = "Advent of Code 2023 Solutions"
repository = "https://github.com/blitz/oac2023"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
clap = { version = "4.4.10", features = ["derive"] }
colored = "2.0.4"
itertools = "0.12.0"
